Add book authors resource
