# api/schemas/bookauthors.go
@@ -1,0 +1,5 @@
+package schemas
+
+type CreateBookAuthorsRequest struct {
+	AuthorID int32 `json:"author_id" binding:"required,min=1"`
+}
