# docs/swagger.yaml
@@ -35,6 +35,14 @@ definitions:
     required:
     - name
     type: object
+  schemas.CreateBookAuthorsRequest:
+    properties:
+      author_id:
+        minimum: 1
+        type: integer
+    required:
+    - author_id
+    type: object
   schemas.CreateBookRequest:
     properties:
       publishedYear:
@@ -53,6 +61,16 @@ definitions:
     properties:
       attributes:
         $ref: '#/definitions/schemas.CreateAuthorRequest'
+      type:
+        type: string
+    required:
+    - attributes
+    - type
+    type: object
+  schemas.CreateResource-schemas_CreateBookAuthorsRequest:
+    properties:
+      attributes:
+        $ref: '#/definitions/schemas.CreateBookAuthorsRequest'
       type:
         type: string
     required:
@@ -91,6 +109,13 @@ definitions:
     properties:
       data:
         $ref: '#/definitions/schemas.CreateResource-schemas_CreateAuthorRequest'
+      links:
+        $ref: '#/definitions/schemas.DocumentLink'
+    type: object
+  schemas.Document-schemas_CreateResource-schemas_CreateBookAuthorsRequest:
+    properties:
+      data:
+        $ref: '#/definitions/schemas.CreateResource-schemas_CreateBookAuthorsRequest'
       links:
         $ref: '#/definitions/schemas.DocumentLink'
     type: object
@@ -574,6 +599,106 @@ paths:
           schema:
             type: string
       summary: update book by id
+      tags:
+      - books
+  /books/{id}/authors:
+    get:
+      consumes:
+      - application/json
+      description: Returns a list of books. Returns 500 if there is a database error.
+        Returns 200 and the book data on success.
+      parameters:
+      - description: Book ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/schemas.Document-array_schemas_Resource-schemas_Author'
+        "400":
+          description: On validation error
+          schema:
+            $ref: '#/definitions/schemas.DocumentError'
+        "500":
+          description: On internal server error
+          schema:
+            type: string
+      summary: get book authors
+      tags:
+      - books
+    post:
+      consumes:
+      - application/json
+      description: Creates a book author in the system.
+      parameters:
+      - description: Book ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Book data in json api format
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/schemas.Document-schemas_CreateResource-schemas_CreateBookAuthorsRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Book author created successfully
+          schema:
+            $ref: '#/definitions/schemas.Document-schemas_Resource-schemas_Book'
+        "400":
+          description: On validation error
+          schema:
+            $ref: '#/definitions/schemas.DocumentError'
+        "500":
+          description: On internal server error
+          schema:
+            type: string
+      summary: create book author
+      tags:
+      - books
+  /books/{id}/authors/{author_id}:
+    delete:
+      consumes:
+      - application/json
+      description: Deletes a book from the system by its ID.
+      parameters:
+      - description: Book ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Author ID
+        in: path
+        name: author_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: On validation error
+          schema:
+            $ref: '#/definitions/schemas.DocumentError'
+        "404":
+          description: On book not found
+          schema:
+            $ref: '#/definitions/schemas.DocumentError'
+        "500":
+          description: On internal server error
+          schema:
+            type: string
+      summary: delete book by id
       tags:
       - books
 swagger: "2.0"
